--- a/Predicting Rainfall In North Cyprus Using Different Regression Models.ipynb
+++ b/Predicting Rainfall In North Cyprus Using Different Regression Models.ipynb
@@ -519,255 +519,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-9.11888777e-01,  6.17055553e-02,  1.44456628e+00],\n",
-       "       [-5.76138423e-01, -1.92297599e-01,  8.68722641e-01],\n",
-       "       [ 1.09997173e+00,  2.07373045e-02, -9.35106019e-01],\n",
-       "       [ 1.03710109e+00, -3.41711219e-01,  2.51642116e-01],\n",
-       "       [-1.17393783e+00,  1.28689724e+00,  1.26498630e+00],\n",
-       "       [-5.64779441e-01,  1.25171274e+00,  7.33847623e-01],\n",
-       "       [ 1.22941128e+00,  2.11601155e-01, -9.78813316e-01],\n",
-       "       [-6.17083588e-01,  2.41001900e-01, -1.00019189e+00],\n",
-       "       [ 2.49368940e-01, -3.01224948e-01,  1.20520224e-01],\n",
-       "       [ 1.02072302e+00, -1.46231337e+00, -2.17838859e+00],\n",
-       "       [-1.38579604e+00,  9.75056557e-01,  1.27021217e+00],\n",
-       "       [-9.11888777e-01, -3.56652582e-01, -1.45674311e+00],\n",
-       "       [-3.05900333e-01,  5.84653226e-01,  7.67103175e-01],\n",
-       "       [ 2.86351669e-01,  8.36728463e-01,  8.40150535e-03],\n",
-       "       [ 1.46345913e+00, -6.63673472e-01, -8.76196184e-01],\n",
-       "       [ 1.26375239e+00, -7.11871414e-01, -6.65546014e-01],\n",
-       "       [ 1.57757727e+00, -2.03008513e+00, -2.16366113e+00],\n",
-       "       [-7.31730050e-01,  5.99594588e-01,  1.58526570e-01],\n",
-       "       [-5.10080223e-01,  3.46089479e-01,  6.73338354e-01],\n",
-       "       [-1.77992628e+00,  1.79490355e+00, -7.79280003e-01],\n",
-       "       [ 1.52685517e-01,  1.68814692e-02,  2.47841481e-01],\n",
-       "       [ 6.12853422e-02, -3.21468084e-01,  7.77630857e-02],\n",
-       "       [ 9.71588821e-01, -8.79600252e-01, -4.73252986e-02],\n",
-       "       [-1.04291331e+00,  1.79490355e+00,  5.47141451e-01],\n",
-       "       [ 1.13536948e+00, -1.17842749e+00, -1.45999273e-01],\n",
-       "       [ 1.41432493e+00,  8.04435842e-01, -2.46716088e-01],\n",
-       "       [ 1.56119920e+00, -2.55303280e+00, -2.62021236e+00],\n",
-       "       [ 1.17287762e-01, -4.11598235e-01, -3.19878303e-01],\n",
-       "       [-3.22278399e-01, -8.64658890e-01,  1.28256423e+00],\n",
-       "       [ 2.03404690e-01,  2.71848582e-01,  4.59251778e-01],\n",
-       "       [-6.00705522e-01, -1.19336886e+00, -8.82372215e-01],\n",
-       "       [ 9.22454623e-01, -1.68643380e+00, -1.49435680e-01],\n",
-       "       [ 8.68952940e-01,  4.84048055e-01,  1.79477568e-01],\n",
-       "       [-7.31730050e-01, -7.60069356e-01, -1.35365090e+00],\n",
-       "       [-1.28382937e+00,  2.19794805e-01,  1.54005723e+00],\n",
-       "       [-1.12028555e+00,  1.12717923e+00,  7.78275730e-01],\n",
-       "       [ 3.80390548e-02,  7.34066846e-01,  1.33822445e-01],\n",
-       "       [-1.78732282e+00,  1.47101338e+00,  7.30522068e-01],\n",
-       "       [ 5.12474646e-01,  2.26060538e-01,  8.87773322e-01],\n",
-       "       [-5.18815192e-01, -3.86535306e-01,  8.84922846e-01],\n",
-       "       [ 5.28292270e-03, -1.91055423e+00, -1.58929024e+00],\n",
-       "       [-1.14118170e+00,  3.30650072e-01,  7.37648258e-01],\n",
-       "       [-1.30496236e+00,  1.83972764e+00,  7.37648258e-01],\n",
-       "       [-6.83687723e-01, -3.52170173e-01,  7.59248531e-01],\n",
-       "       [ 7.07951870e-02, -3.37480771e+00, -1.26528614e+00],\n",
-       "       [ 8.89698490e-01, -4.91124840e-01,  1.63277363e-01],\n",
-       "       [ 1.38104047e+00, -2.35879509e+00, -2.39930048e+00],\n",
-       "       [-6.17083588e-01, -5.95714374e-01,  3.25279410e-01],\n",
-       "       [-8.78075996e-01, -7.13207647e-02, -3.76811885e-02],\n",
-       "       [-7.20265404e-01,  7.80883114e-01,  4.63717523e-01],\n",
-       "       [ 1.21725981e+00,  7.63949571e-01, -2.34364026e-01],\n",
-       "       [-8.95510711e-01,  7.63949571e-01,  1.54765849e+00],\n",
-       "       [ 5.79043560e-01,  5.32117469e-01,  7.79930317e-01],\n",
-       "       [ 1.19929385e-01,  9.43245915e-01, -2.63818944e-01],\n",
-       "       [-5.55938808e-01,  2.28580140e-02,  1.28422377e-01],\n",
-       "       [-6.00705522e-01, -1.77356237e-01,  1.00617892e+00],\n",
-       "       [ 1.25265757e+00,  4.21744182e-01, -8.51492059e-01],\n",
-       "       [-6.73086007e-01,  2.44375756e-01,  7.81830634e-01],\n",
-       "       [-1.38685269e+00,  1.77996219e+00, -8.08734921e-01],\n",
-       "       [ 5.29909362e-01,  7.49008209e-01,  9.29105223e-01],\n",
-       "       [ 1.13536948e+00,  6.59360036e-01, -1.00019189e+00],\n",
-       "       [ 1.52844307e+00, -1.55196154e+00, -2.25202589e+00],\n",
-       "       [ 3.65600376e-01, -1.47473513e-01, -1.38310582e+00],\n",
-       "       [ 9.75410370e-01,  6.46908901e-01, -1.39430586e-02],\n",
-       "       [-1.25699803e+00,  3.85079319e-01,  1.89007191e+00],\n",
-       "       [-4.20546795e-01, -1.16348613e+00, -1.29474106e+00],\n",
-       "       [ 1.19454185e+00,  3.75474158e-01, -9.45082685e-01],\n",
-       "       [ 1.33137503e-01, -4.52084507e-01, -4.90071554e-03],\n",
-       "       [ 1.06712754e+00,  6.28481221e-01,  4.04807688e-01],\n",
-       "       [ 1.37839885e+00, -6.59335657e-01, -1.14176552e+00],\n",
-       "       [-6.02293416e-02, -1.86573015e+00, -1.57456278e+00],\n",
-       "       [-1.18080606e+00,  5.82243329e-01,  1.54148246e+00],\n",
-       "       [ 9.55210755e-01, -5.80773012e-01, -2.81796021e-02],\n",
-       "       [-7.11530436e-01, -4.59747979e-01,  2.87478932e-01],\n",
-       "       [-6.49839720e-01, -2.52063047e-01,  7.81830634e-01],\n",
-       "       [-1.00804387e+00,  5.81279370e-01,  5.99400176e-01],\n",
-       "       [ 1.41379660e+00, -2.17949875e+00, -2.34039064e+00],\n",
-       "       [ 1.85441649e-01,  7.04184122e-01,  5.46191293e-01],\n",
-       "       [ 5.42589155e-01, -2.34229809e-01, -5.93523990e-01],\n",
-       "       [ 7.92521965e-01,  3.00269302e-01, -3.43347221e-01],\n",
-       "       [ 8.24186226e-01, -4.76183478e-01,  1.48549904e-01],\n",
-       "       [ 1.15174755e+00, -1.26807567e+00,  2.22187198e-01],\n",
-       "       [-1.17006637e-01,  4.60141876e-01,  6.19828587e-01],\n",
-       "       [ 1.94423170e-01,  6.50202427e-01,  5.33364151e-01],\n",
-       "       [ 9.06076557e-01, -1.71631653e+00, -1.89856688e+00],\n",
-       "       [ 1.47930887e+00, -6.10655736e-01, -4.25820991e-01],\n",
-       "       [ 6.27649433e-01, -1.01407251e+00,  7.08193340e-01],\n",
-       "       [ 3.84091741e-01, -8.52981679e-02,  8.46441421e-01],\n",
-       "       [-6.98973918e-01,  1.06529641e-01,  7.52375717e-01],\n",
-       "       [-9.08017316e-02,  3.24673527e-01,  6.18846756e-01],\n",
-       "       [-1.14235156e+00,  2.01582226e+00,  1.48549904e-01],\n",
-       "       [-1.14118170e+00,  1.14953311e+00,  8.29813645e-01],\n",
-       "       [-1.32134043e+00, -5.95714374e-01,  1.17947202e+00],\n",
-       "       [-1.43598689e+00, -1.77356237e-01, -1.60726732e-01],\n",
-       "       [-1.17393783e+00, -7.27667030e-02, -6.76187791e-01],\n",
-       "       [-1.17393783e+00,  4.67641932e-02,  1.44456628e+00],\n",
-       "       [ 1.26639401e+00,  1.94010715e-03, -5.31763679e-01],\n",
-       "       [ 1.25001594e+00, -4.76183478e-01,  3.98916704e-01],\n",
-       "       [-1.58180451e+00,  1.71200309e+00,  7.35747940e-01],\n",
-       "       [-1.20828186e-01, -4.33849619e-01,  1.31251007e+00],\n",
-       "       [ 1.05347915e+00, -6.25597098e-01, -1.52872087e-01],\n",
-       "       [ 8.70590747e-01, -4.92120931e-01, -3.20765118e-01],\n",
-       "       [ 2.83710046e-01, -1.70137516e+00, -1.67765499e+00],\n",
-       "       [-1.30496236e+00,  1.64548993e+00,  5.89898590e-01],\n",
-       "       [-5.02437125e-01,  4.67641932e-02,  2.36914657e-01],\n",
-       "       [ 6.81697051e-01,  4.95005054e-01,  1.70150177e-01],\n",
-       "       [-2.85154782e-01,  5.09946416e-01,  1.24132735e+00],\n",
-       "       [ 2.76947490e-01, -9.68766445e-01,  3.05231063e-01],\n",
-       "       [-1.04291331e+00,  5.24887778e-01,  1.44456628e+00],\n",
-       "       [-5.84327456e-01,  1.16736635e+00,  1.54765849e+00],\n",
-       "       [ 4.47490707e-01, -2.52063047e-01,  4.11268767e-01],\n",
-       "       [-4.92064350e-01, -1.74367965e-01,  3.57679820e-01],\n",
-       "       [-3.17910914e-01, -1.21727503e+00,  7.49921140e-01],\n",
-       "       [-4.68589122e-01, -1.25213821e+00,  9.78196752e-01],\n",
-       "       [-1.19665580e+00,  2.35496364e+00,  3.16252903e-01],\n",
-       "       [ 1.39372027e+00,  4.97896931e-01, -4.04917501e-01],\n",
-       "       [ 1.47930887e+00, -7.15245270e-01, -3.81638614e-01],\n",
-       "       [-1.16178637e+00,  1.10977161e-02,  1.46356945e+00],\n",
-       "       [ 3.32844244e-01,  1.81236451e-01,  9.14377764e-01],\n",
-       "       [-9.77401041e-01,  1.36412365e-01,  6.34556046e-01],\n",
-       "       [ 1.41855153e+00,  6.02486465e-01, -9.99165790e-02],\n",
-       "       [ 1.51206500e+00, -1.22999929e+00, -8.76196184e-01],\n",
-       "       [-1.38685269e+00,  1.85466900e+00, -6.90915250e-01],\n",
-       "       [ 6.60405565e-01, -4.31359392e-01,  7.81830634e-01],\n",
-       "       [-1.23945010e+00, -5.06066202e-01,  1.12056219e+00],\n",
-       "       [ 1.33190627e+00, -7.30186632e-01, -1.75454191e-01],\n",
-       "       [-1.22624198e+00,  6.91170678e-01,  1.47449628e+00],\n",
-       "       [-8.32640070e-01, -3.19058187e-01,  1.96532915e-01],\n",
-       "       [-7.97242315e-01,  4.05356882e-01,  1.17947202e+00],\n",
-       "       [-3.08630010e-01, -1.96780008e-01, -1.39617374e-01],\n",
-       "       [ 9.63945723e-01,  1.57330272e-01,  4.10394545e-02],\n",
-       "       [ 1.80158402e-01,  6.00558547e-01,  1.77529742e-01],\n",
-       "       [-1.66527982e+00,  1.96177814e-01, -3.52183697e-01],\n",
-       "       [-1.53584026e+00,  1.49607631e+00,  8.55943008e-01],\n",
-       "       [ 8.24186226e-01, -2.37121685e-01, -5.14185744e-01],\n",
-       "       [-1.36149311e+00,  3.37397784e-01,  1.55906040e+00],\n",
-       "       [-1.02653524e+00,  2.30290986e+00,  7.22920799e-01],\n",
-       "       [-5.99613651e-01, -2.93400816e-01,  5.31954749e-01],\n",
-       "       [-1.25741606e-01, -1.46231337e+00,  7.09852874e-02],\n",
-       "       [ 1.33190627e+00,  1.51353727e-01, -2.34364026e-01],\n",
-       "       [-7.98298964e-01,  7.70215303e-01,  7.98458410e-01],\n",
-       "       [ 1.29175360e+00, -4.19791886e-01, -1.22395424e+00],\n",
-       "       [ 1.19924394e+00,  2.68892442e-01,  4.01862196e-01],\n",
-       "       [ 1.52685517e-01, -1.41748929e+00, -1.32419598e+00],\n",
-       "       [-1.12480364e+00,  1.51353727e-01, -6.46732874e-01],\n",
-       "       [-1.32134043e+00,  7.93832295e-01,  6.19828587e-01],\n",
-       "       [-3.71412597e-01, -1.47473513e-01,  4.60281116e-01],\n",
-       "       [ 6.44027499e-01, -2.67004409e-01, -5.76345198e-02],\n",
-       "       [ 9.72680692e-01, -9.36875474e-01, -7.14970099e-01],\n",
-       "       [-1.63516531e+00,  8.92156096e-01,  9.34331095e-01],\n",
-       "       [-1.57440797e+00,  1.25219472e+00,  7.06768102e-01],\n",
-       "       [ 1.12936419e+00, -3.83048988e-01, -9.15076751e-02],\n",
-       "       [ 1.43017467e+00, -1.43243065e+00, -2.34039064e+00],\n",
-       "       [ 9.87966887e-01, -2.96887133e-01, -5.07803845e-01],\n",
-       "       [ 1.72233532e-01, -1.85549887e-01, -7.61626132e-02],\n",
-       "       [ 7.58673962e-01, -1.35772384e+00, -2.01638655e+00],\n",
-       "       [ 1.25001594e+00, -1.40254792e+00,  1.48549904e-01],\n",
-       "       [ 3.65600376e-01, -1.38760656e+00, -1.28001360e+00],\n",
-       "       [ 1.44655274e+00, -8.64658890e-01, -9.47933161e-01],\n",
-       "       [ 1.47930887e+00, -1.59678563e+00, -2.38457302e+00],\n",
-       "       [ 1.03273360e+00, -1.78850373e-01,  4.44080911e-01],\n",
-       "       [ 6.93161698e-01, -1.74619925e+00, -2.00165909e+00],\n",
-       "       [-2.12545356e-01, -6.14142054e-01, -1.72508699e-01],\n",
-       "       [-8.91639250e-02,  7.52494526e-01,  1.18290843e+00],\n",
-       "       [-1.05929137e+00,  2.11119176e-01, -1.45674311e+00],\n",
-       "       [ 1.36466241e+00,  3.60532796e-01, -5.67394627e-01],\n",
-       "       [ 1.59395533e+00, -9.69248425e-01, -1.34521433e-02],\n",
-       "       [-5.87057133e-01,  9.09378828e-01,  4.02353111e-01],\n",
-       "       [ 7.71776415e-01, -3.01369542e-01, -3.05546744e-01],\n",
-       "       [ 1.48247882e+00,  5.59218022e-02, -4.05867660e-01],\n",
-       "       [-1.02706356e+00,  1.17604197e+00,  1.19324932e+00],\n",
-       "       [-3.55034531e-01, -1.92297599e-01,  5.60918752e-01],\n",
-       "       [-1.22307203e+00,  1.72019674e+00, -1.28001360e+00],\n",
-       "       [ 2.83710046e-01, -1.08877932e+00, -1.73656483e+00],\n",
-       "       [-7.66074076e-02, -5.35948926e-01,  3.69461787e-01],\n",
-       "       [-8.42281996e-01,  1.53503058e+00,  9.51196411e-01],\n",
-       "       [-1.58497738e-01, -3.11828495e-01,  9.29105223e-01],\n",
-       "       [-7.64486183e-01, -1.25313430e+00, -6.46732874e-01],\n",
-       "       [ 1.31552821e+00,  7.19125484e-01, -1.07382918e+00],\n",
-       "       [-7.64486183e-01,  1.51353727e-01, -9.56009509e-01],\n",
-       "       [-4.04168729e-01,  7.24105938e-01,  9.29105223e-01],\n",
-       "       [-9.05548881e-01, -8.24062914e-02,  2.06501987e+00],\n",
-       "       [-1.91095081e+00,  1.16736635e+00, -7.05642709e-01],\n",
-       "       [-2.14729098e-01, -6.10157691e-01,  1.54913124e+00],\n",
-       "       [-8.79132645e-01,  4.67641932e-02, -9.26554592e-01],\n",
-       "       [-1.66527982e+00,  1.37654541e+00, -7.05642709e-01],\n",
-       "       [-3.22278399e-01,  3.45591434e-01,  6.34556046e-01],\n",
-       "       [ 1.32926465e+00, -2.77607957e-01, -7.72628893e-01],\n",
-       "       [-8.34516534e-01,  9.14393630e-01,  1.60656833e+00],\n",
-       "       [-2.73144200e-01,  4.35239606e-01,  7.81830634e-01],\n",
-       "       [ 7.25917830e-01,  1.66295089e-01,  1.78004822e-01],\n",
-       "       [-1.14963490e+00,  1.53704456e+00, -2.29537296e-02],\n",
-       "       [ 9.28459913e-01,  5.50288094e-01, -3.50710951e-01],\n",
-       "       [ 1.06985722e+00, -4.76183478e-01, -2.49091485e-01],\n",
-       "       [-1.25582816e+00,  1.89949308e+00, -1.10328410e+00],\n",
-       "       [-7.80864249e-01,  9.15882793e-02, -1.50092549e+00],\n",
-       "       [ 1.15174755e+00, -9.84189787e-01,  2.51642116e-01],\n",
-       "       [-1.48161150e+00,  2.91162186e-01,  1.27309658e+00],\n",
-       "       [-7.97242315e-01,  2.85825986e-01,  7.37648258e-01],\n",
-       "       [ 9.87966887e-01, -2.38867782e+00, -2.01638655e+00],\n",
-       "       [-8.79132645e-01,  1.76502083e+00,  1.25847771e+00],\n",
-       "       [-3.71412597e-01, -1.17590789e-01,  1.28256423e+00],\n",
-       "       [ 4.96624905e-01, -1.17590789e-01,  9.14377764e-01],\n",
-       "       [ 1.23046793e+00,  2.32326270e-01, -1.81630222e-01],\n",
-       "       [-1.57987990e+00,  2.14869366e+00, -7.49918820e-02],\n",
-       "       [ 1.61033340e+00, -1.22325158e+00, -6.17277956e-01],\n",
-       "       [-9.95892406e-01,  1.18375365e+00,  1.04169902e+00],\n",
-       "       [ 1.02072302e+00, -1.13360341e+00, -1.75129229e+00],\n",
-       "       [ 1.74135793e+00, -2.85186004e+00, -2.54657506e+00],\n",
-       "       [ 1.36307451e-01, -1.59678563e+00, -1.66292753e+00],\n",
-       "       [ 9.24565002e-02,  1.20616750e-02, -2.45765930e-01],\n",
-       "       [-5.84327456e-01,  6.44418674e-01,  1.53293104e+00],\n",
-       "       [ 5.29926972e-01,  6.69320944e-01, -5.95677683e-01],\n",
-       "       [-1.09204750e+00,  1.61560721e+00,  3.65148745e-01],\n",
-       "       [ 1.52844307e+00, -4.91124840e-01, -2.78546402e-01],\n",
-       "       [ 1.11899142e+00, -1.61172699e+00, -1.79547466e+00],\n",
-       "       [-1.69803595e+00,  1.29169982e+00,  1.09478913e+00],\n",
-       "       [ 5.94893301e-01, -6.85362546e-01,  7.08193340e-01],\n",
-       "       [-7.64486183e-01,  6.59360036e-01,  5.02008916e-01],\n",
-       "       [-1.15755977e+00, -6.25597098e-01,  1.62129579e+00],\n",
-       "       [ 2.18197782e-01, -1.32532151e-01,  5.91798907e-01],\n",
-       "       [ 1.13536948e+00,  6.82270125e-01,  3.41970530e-01],\n",
-       "       [-6.88935749e-01,  9.49511647e-01,  1.64172420e+00],\n",
-       "       [-1.76354821e+00,  8.08773657e-01, -7.20370168e-01],\n",
-       "       [ 1.33560455e+00, -1.01685468e-01, -1.15364251e+00],\n",
-       "       [-9.78986016e-01,  6.50202427e-01,  2.01758788e-01],\n",
-       "       [ 1.39741854e+00,  5.03680684e-01, -1.90181649e-01],\n",
-       "       [-8.01997237e-01,  9.65416968e-01, -8.75645168e-02],\n",
-       "       [ 1.52685517e-01,  7.78890933e-01,  5.60918752e-01],\n",
-       "       [ 1.54482113e+00, -8.94541614e-01, -6.17277956e-01],\n",
-       "       [ 7.09539764e-01, -3.41711219e-01, -6.02550497e-01],\n",
-       "       [-1.45236496e+00,  1.04879941e+00,  9.25304588e-01],\n",
-       "       [ 4.27942692e-01,  1.71596863e-01,  2.56392909e-01],\n",
-       "       [ 1.13536948e+00, -9.69248425e-01, -1.75129229e+00],\n",
-       "       [-1.00846289e+00,  7.92286636e-01,  1.00934448e+00],\n",
-       "       [-1.48512109e+00,  1.63054857e+00, -1.04437426e+00],\n",
-       "       [ 5.53155649e-01,  8.85890364e-01,  1.78954980e-01],\n",
-       "       [ 9.38832689e-01, -1.71631653e+00, -1.70710991e+00],\n",
-       "       [ 2.83710046e-01, -6.40538460e-01,  1.78004822e-01],\n",
-       "       [ 2.50953914e-01,  3.90415520e-01,  4.72553999e-01]])"
+       "(240, 3)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +537,9 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "scaler = StandardScaler()\n",
-    "scaler.fit_transform(df)"
+    "scaler.fit_transform(df)\n",
+    "\n",
+    "df.shape"
    ]
   },
   {
